# pyfarm-config

./: README.md  pyproject.toml
src/pyfarm/config/: __init__.py  settings.py
tests/: test_settings.py
